FE/src/styles/SearchBar.css
.search-name {
  color: #58555b;
  font-weight: 600;
  font-size: 16px;
  min-width: fit-content;
}

.chosen-option {
  background: white;
  border-radius: 6px;
  border: 1px solid #58555b;
  width: 200px;
  min-width: 200px;
  display: flex;
  align-items: center;
  padding: 8px 12px;
  position: relative;
  font-size: 16px;
  height: 100%;
  color: #7400cc;
  font-weight: 500;
}

.search-option-box {
  display: flex;
  width: 100%;
  gap: 8px;
  justify-content: space-between;
  align-items: center;
  height: 36px;
}

.list-options {
  position: absolute;
  background: white;
  z-index: 1;
  width: 102%;
  border-radius: 6px;
  left: -1px;
  top: 115%;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
  max-height: 204px;
  overflow-y: overlay;
  border: 1px solid #58555b;
  overscroll-behavior: contain;
}

.list-options::-webkit-scrollbar {
  width: 10px;
  border-radius: 6px;
  position: absolute;
  z-index: 2;
}

.list-options::-webkit-scrollbar-thumb {
  background: #979797;
  border-radius: 6px;
}

.list-option {
  padding: 8px 12px;
  font-weight: 500;
  font-size: 16px;
  color: #58555b;
}

.list-option:hover {
  background: #7400cc;
  color: white;
  cursor: default;
}

.option-button-container {
  position: relative;
  cursor: pointer;
  user-select: none;
  width: 36px;
  height: 36px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
}

.search-option:hover {
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
}

.search-options-container {
  position: absolute;
  cursor: default;
  z-index: 2;
  background: white;
  top: 120%;
  right: 0;
  padding: 20px;
  border: 1px solid #979797;
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: flex-end;
  border-radius: 6px;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
  width: max-content;
}

.chosing {
  border: 1px solid #7400cc;
  outline: 1px solid #7400cc;
}

.search-options-wrapper {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.reset-apply-buttons {
  display: flex;
  gap: 12px;
}

.reset-apply-buttons > button {
  height: 36px;
}

.search-bar-container {
  display: flex;
  align-items: center;
  gap: 14px;
  flex-wrap: wrap;
}

.search-text-container {
  display: flex;
  height: 36px;
  align-items: center;
  gap: 14px;
  position: relative;
}

.search-text {
  height: 100%;
  border: 1px solid #58555b;
  border-radius: 8px;
  padding: 4px 36px 4px 42px;
  width: 360px;
  font-size: 16px;
  font-weight: 500;
  color: #58555b;
}

.search-text::placeholder {
  font-weight: 500;
}

.search-text:focus {
  border: 1px solid #7400cc;
}

.sort-button-wrapper {
  position: relative;
}

.sort-options {
  position: absolute;
  top: 120%;
  right: 0;
  border-radius: 6px;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
  min-width: max-content;
  background: white;
  display: flex;
  flex-direction: column;
  font-size: 16px;
  font-weight: 600;
  color: #58555b;
  border: 1px solid #979797;
  cursor: default;
  user-select: none;
}

.sort-option {
  padding: 8px 34px 8px 20px;
  position: relative;
  display: flex;
  align-items: center;
}

.sort-option:hover {
  background: #7400cc;
  color: white;
}

.sort-option:hover > svg {
  fill: white;
}

.sort-chosen {
  position: absolute;
  right: 10px;
  fill: #7400cc;
}

